# brutelock

./: INSTALL  Makefile.am  Makefile.in  README  brutelock.c  brutelock.h  brutelock.logrotate  brutelockd.c  brutelocksync.c  brutelocksync.h  configure  configure.ac  db.c  db.h  syncmain.c
conf/: brutelock.conf
scripts/: brutelock_check.sh  createdb.sh  initscript
